# ssvep_control_car

./: .gitignore  README.md  lsl_received_data.py  model.py  pyproject.toml  ssvep_car.py
eeg_data/: temp.csv
