[project]
name = "ssvep_control_car"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.22"
dependencies = [
    "scipy==1.13.1",
    "pandas==2.2.2",
    "pyproject==1.3.1",
    "scikit-learn==1.5.1",
    "pylsl==1.16.0",
    "djitellopy==2.5.0",
    "numpy==1.24.0",
    "psychopy==2024.1.4",
    "pyserial==3.5"
]
